[tool.poetry]
name = "template for poetry2nix"
version = "0.7.0"
description = "A basic toml file"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.4"
ipython = "^9.1.0"
debugpy = "^1.8.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
